# my-invest-global

./: .env.example  .gitignore  README.md  aidc_report.html  data_china_aidc.md  data_us_aidc.md  docker-compose.yml  methodology.md  pyproject.toml
.claude/skills/: research-report.md
.codex/skills/aidc-report/: SKILL.md
app/: auth.py  dashboard.py  data_loader.py  sidebar.py  styles.py
app/components/: tab1_overview.py  tab2_brief.py  tab3_stock.py  tab4_signals.py  ui.py
app/pages/: analysis.py  backtest.py  chip_panel.py
app/utils/: runner.py
data/agent_input/cn/: 01_optical_communication.md  02_memory_semiconductor.md  03_compute_chips.md  04_pcb.md  05_upstream_materials.md  06_ai_servers.md  07_equipment_packaging_test.md  08_thermal_liquid_cooling.md  09_power_systems.md  README.md  _out_of_scope.md  data_china_aidc.md  holdings.yaml  (+1 more)
data/kg_seed/: concepts.yaml
docs/: architecture.md  data-source-matrix.md  macro-market-indicator-matrix.md  project-scope.md
docs/adr/: ADR-001-tech-stack.md  ADR-002-data-pipeline-interface.md  ADR-003-portfolio-framework.md  ADR-004-analysis-engine.md  ADR-005-frontend-dashboard.md  ADR-006-ai-integration-layer.md  ADR-007-macro-indicator-agent.md
engine/: __init__.py  macro_gate.py  portfolio.py  schemas.py
engine/agent/: __init__.py  chip_analysis.py  chip_fetcher.py  chip_screenshot_parser.py  claim_verifier.py  graph.py  nodes.py  prompt_contracts.py  runner.py  session_store.py  state.py  technical_fetcher.py
engine/backtest/: runner.py  strategies.py
engine/data_agent/: fields.py  orchestrator.py  rate_limiter.py  scheduler.py  storage.py
engine/kg/: __init__.py  connection.py  institution_loader.py  query.py  schema.py  seed_loader.py
engine/macro_agent/: indicator_groups.py  orchestrator.py  regime.py  release_calendar.py  scheduler.py  sec_cik_map.py  storage.py  update_class.py
engine/mcp/: __init__.py  macro_tools.py  server.py
engine/rag/: __init__.py  embedder.py  ingest.py  pdf_fetcher.py  pdf_parser.py  retriever.py  schema.py
harness/: CONNECTORS.md  GLOSSARY.md  agent-registry.yml  bug-standard.md  req-constants.sh  requirement-standard.md
research/: _index.html  index.html  pending.html
research/coherent-pluggable-optics/: index.html
research/cpo-co-packaged-optics/: index.html
research/hcf-hollow-core-fiber/: index.html
research/lpo-linear-pluggable-optics/: index.html
research/micro-led-interconnect/: index.html
research/ocs-mems/: index.html
scripts/: __init__.py  e2e_test.py  ingest.py  refresh_aidc_data.py  refresh_data_agent.py  refresh_macro_agent.py  run_analysis.py  run_backtest.py  setup.sh  start.sh  validate_akshare.py
tasks/features/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md  REQ-006.md  REQ-007.md  REQ-008.md  REQ-009.md  REQ-010.md  REQ-011.md  REQ-012.md  REQ-013.md  REQ-014.md  REQ-015.md  REQ-016.md  REQ-017.md  REQ-018.md  REQ-019.md  REQ-020.md  REQ-021.md  REQ-022.md  REQ-023.md  REQ-024.md  REQ-025.md  REQ-026.md  REQ-027.md  REQ-028.md  REQ-029.md  REQ-030.md  REQ-031.md  REQ-032.md  REQ-033.md  REQ-034.md  REQ-035.md  REQ-036.md  REQ-037.md  REQ-038.md  REQ-039.md  REQ-040.md  (+1 more)
tasks/phases/: PHASE-000.md  PHASE-001.md  PHASE-002.md  PHASE-003.md  PHASE-004.md  PHASE-005.md  PHASE-006.md  PHASE-007.md  PHASE-008.md  PHASE-011.md
tasks/test-cases/: TC-001-01.md  TC-001-02.md  TC-001-03.md  TC-001-04.md  TC-001-05.md  TC-001-06.md  TC-001-07.md  TC-006-01.md  TC-006-02.md  TC-006-03.md  TC-006-04.md  TC-006-05.md  TC-006-06.md  TC-006-07.md  TC-006-08.md  TC-006-09.md  TC-006-10.md  TC-006-11.md  TC-006-12.md  TC-006-13.md  TC-006-14.md  TC-006-15.md  TC-006-16.md  TC-007-01.md  TC-007-02.md  TC-007-03.md  TC-007-04.md  TC-007-05.md  TC-007-06.md  TC-008-01.md  TC-008-02.md  TC-008-03.md  TC-008-04.md  TC-008-05.md  TC-008-06.md  TC-008-07.md  TC-009-01.md  TC-009-02.md  TC-009-03.md  TC-009-04.md  (+134 more)
tests/: test_app_dashboard.py  test_backtest.py  test_ingest.py  test_macro_gate.py  test_portfolio.py  test_refresh_aidc_data.py  test_schemas.py
tests/test_agent/: test_chip_analysis.py  test_chip_fetcher.py  test_chip_panel.py  test_chip_screenshot_parser.py  test_claim_verifier.py  test_dashboard_utils.py  test_nodes.py  test_phase10.py  test_session_store.py  test_state.py
tests/test_app/: test_data_loader.py  test_tab1_overview.py  test_tab3_stock.py  test_tab4_signals.py
tests/test_data_agent/: test_dispatch.py  test_fields.py  test_rate_limiter.py  test_scheduler.py  test_storage.py  test_tencent.py
tests/test_kg/: test_connection_schema.py  test_institution_loader.py  test_query.py  test_seed_loader.py
tests/test_macro_agent/: test_akshare_macro.py  test_alpha_vantage.py  test_base_macro.py  test_fred.py  test_macro_group_lmn.py  test_macro_orchestrator.py  test_macro_regime.py  test_macro_scheduler.py  test_macro_storage.py  test_sec_edgar.py  test_yahoo_global.py
tests/test_mcp/: test_macro_tools.py
tests/test_rag/: test_embedder_schema.py  test_pdf_pipeline.py
(+38 files in other folders)
