[project]
name = "my-invest-global"
version = "0.1.0"
description = "AI infrastructure stock portfolio advisor for A-share and US markets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Daniel Wong", email = "ruoxu.wang@gmail.com" }
]
keywords = ["investment", "quantitative", "AIDC", "A-share", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core analysis
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b0",
    # Data storage
    "duckdb>=1.0",
    "pyarrow>=14.0",
    # File watching (agent input trigger)
    "watchdog>=4.0",
    # LLM synthesis
    "anthropic>=0.25",
    # Dashboard
    "streamlit>=1.32",
    "plotly>=5.18",
    # Utilities
    "pydantic>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
tushare = [
    "tushare>=1.4",
]
data = [
    "akshare==1.18.60",
    "yfinance>=0.2",
    "httpx>=0.27",
]
macro = [
    "icalendar>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]
kg = [
    "neo4j>=5.28",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-neo4j>=0.3",
]
rag = [
    "lancedb>=0.9",
    "FlagEmbedding>=1.2",
    "torch>=2.2",
    "tantivy>=0.22",
    "pymupdf>=1.24",
    "httpx>=0.27",
]
agent = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "apscheduler>=3.10",
    "streamlit>=1.35",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
advisor = "app.dashboard:main"
refresh-aidc-data = "scripts.refresh_aidc_data:main"
refresh-data-agent = "scripts.refresh_data_agent:main"
refresh-macro-agent = "scripts.refresh_macro_agent:main"

[project.urls]
Repository = "https://github.com/rushwing/my-invest-global"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "app", "scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# HTML/CSS string literals make line-length enforcement impractical
"app/dashboard.py" = ["E501"]
"app/components/tab2_brief.py" = ["E501"]
"app/components/tab3_stock.py" = ["E501"]
"app/components/tab4_signals.py" = ["E501"]
"app/styles.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
